just new create

--- a/Styles/settings.json
+++ b/Styles/settings.json
@@ -2,7 +2,7 @@
     "name": "TeelekkungTheDev's Repo",
     "description": "This is where, I save my all mess",
     "tint": "#9ef7c1",
-    "cname": "teelekkungthedev.github.io/repo/",
+    "cname": "teelekkungthedev.github.io/",
     "maintainer": {
         "name": "Sahakiyat",
         "email": "sahakiyat8680@hmail.com"
